<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <include
        android:id="@+id/llProgressBar"
        android:visibility="gone"
        layout="@layout/layout_progress_bar_with_text"/>

    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/add_beneficiary"
        android:textAlignment="center"
        android:textColor="@color/colorBlue"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_margin="@dimen/dp_18"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/name"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:maxLength="80"
            android:maxLines="1"
            android:minLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="@dimen/dp_18"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/mobile_number"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/etMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="13"
            android:maxLines="1"
            android:minLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:id="@+id/ivContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:src="@drawable/ic_contacts_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="@dimen/dp_18"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/linked_app_name"
            android:textColor="@color/brown"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
        <Spinner
            android:id="@+id/spinner"
            android:drawSelectorOnTop="true"
            android:prompt="@string/defaultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/brown"
                android:layout_marginStart="5dp"/>
    </LinearLayout>>
    </LinearLayout>

    <Button
        android:id="@+id/butSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#BC012E"
        android:text="@string/submit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvListText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_18"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:visibility="gone"
        android:text="@string/bene_list"
        android:textColor="@color/colorBlue"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvBeneficiaryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_margin="5dp" />

</LinearLayout>