<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbl_manage_ac_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/beneficiary_list"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textColor="@color/colorBlue"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvBeneficiary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" />



    <TextView
        android:id="@+id/lbl_indepay_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:drawableRight="@drawable/indepay"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/powered_by"
        android:typeface="normal" />
    <Button
        android:id="@+id/btn_addBene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:visibility="gone"
        android:background="@drawable/dark_blue_round_bg"
        android:text="@string/add_beneficiary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        />

</LinearLayout>