<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:isScrollContainer="true"
    tools:context=".registration.RegistrationActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:src="@mipmap/ic_sim_setup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/title_verify_num"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorBlue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/SMSCharges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/smsCharges"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSendSMS" />

    <TextView
        android:id="@+id/txtSendSMS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/sendSMSTxt"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoVerify" />

    <TextView
        android:id="@+id/infoVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/infoVerify"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/et_mobile_number_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:singleLine="true"
        android:maxLines="1"
        android:maxLength="10"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:digits="1234567890"
        android:layout_alignParentLeft="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SMSCharges"
    android:text="" />
    <RadioGroup
        android:id="@+id/rgSimSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SMSCharges">
        <RadioButton
            android:id="@+id/rbSimOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sim_one"
            android:checked="true"
            android:textColor="@color/blue"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbSimTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sim_two"
            android:textColor="@color/blue"
            android:textSize="18dp"
            android:textStyle="bold"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#BC012E"
        android:text="@string/verify_via_sms"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl_indepay_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawableRight="@drawable/indepay"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical|end"
        android:text="@string/powered_by"
        android:textAlignment="textEnd"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/llProgressBar"
        android:visibility="gone"
        layout="@layout/layout_progress_bar_with_text"/>

    <!--    <ProgressBar-->
<!--        android:id="@+id/regn_progress_bar"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
</android.support.constraint.ConstraintLayout>