<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*******************************************************************************
  ~  * Copyright, INDEPAY 2019 All rights reserved.
  ~  *
  ~  * The copyright in this work is vested in INDEPAY and the
  ~  * information contained herein is confidential.  This
  ~  * work (either in whole or in part) must not be modified,
  ~  * reproduced, disclosed or disseminated to others or used
  ~  * for purposes other than that for which it is supplied,
  ~  * without the prior written permission of INDEPAY.  If this
  ~  * work or any part hereof is furnished to a third party by
  ~  * virtue of a contract with that party, use of this work by
  ~  * such party shall be governed by the express contractual
  ~  * terms between the INDEPAY which is a party to that contract
  ~  * and the said party.
  ~  *
  ~  * Revision History
  ~  * Date           Who        Description
  ~  * 06-09-2019     Mayank D   Added file header
  ~  *
  ~  ******************************************************************************/
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".beneficiary.paymentAddress.BenePaActivity">

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/select_beneficiary"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_pa_bene_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lbl_indepay_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle2" />

    <TextView
        android:id="@+id/lbl_indepay_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawableRight="@drawable/indepay"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical|end"
        android:text="@string/powered_by"
        android:textAlignment="textEnd"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/dark_blue_round_bg"
        android:text="@string/add_beneficiary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>